--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
     <!-- Resource hints for performance -->
     <link rel="preload" href="/src/main.js" as="script">
     <link rel="preload" href="/src/App.vue" as="fetch" crossorigin>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RW96WM7YF5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RW96WM7YF5');
+    </script>
+
+    
     
     <!-- Critical CSS inline -->
     <style>
